# Generic-Python-Template

./: .gitattributes  .gitignore  .gitmodules  .mailmap  MANIFEST.in  README.md  requirements.txt  setup.cfg  setup.py  setup.toml  tox.ini
.github/: CODEOWNERS  FUNDING.yml  SECURITY.md
.github/ISSUE_TEMPLATE/: bug report.yaml  bug_report.yaml  docs_report.yaml
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: .gitkeep  CD.yml  CI.yml  CI_CD.yml  tests.yml
docs/: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FAQ.md  SECURITY.md  SUPPORT.md
docs/community/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  FAQ.md  GLOSSARY.md  SUPPORT.md
project/: __init__.py  main.py  project.py
src/: main.py
tests/: __init__.py  test_main.py
