# =======================================================================================
#
#      $$$$$$\  $$$$$$$$\ $$$$$$$$\ $$\   $$\ $$$$$$$\   $$$$$$\  $$$$$$$$\  $$$$$$\  
#     $$  __$$\ $$  _____|\__$$  __|$$ |  $$ |$$  __$$\ $$  __$$\ $$  _____|$$  __$$\ 
#     $$ /  \__|$$ |         $$ |   $$ |  $$ |$$ |  $$ |$$ /  \__|$$ |      $$ /  \__|
#     \$$$$$$\  $$$$$\       $$ |   $$ |  $$ |$$$$$$$  |$$ |      $$$$$\    $$ |$$$$\ 
#      \____$$\ $$  __|      $$ |   $$ |  $$ |$$  ____/ $$ |      $$  __|   $$ |\_$$ |
#     $$\   $$ |$$ |         $$ |   $$ |  $$ |$$ |      $$ |  $$\ $$ |      $$ |  $$ |
#     \$$$$$$  |$$$$$$$$\    $$ |   \$$$$$$  |$$ |$$\   \$$$$$$  |$$ |      \$$$$$$  |
#      \______/ \________|   \__|    \______/ \__|\__|   \______/ \__|       \______/ 
#                                                                                  
# =======================================================================================
#                           Configuration file for setuptools.
#  Author: Fabio Craig Wimmer Florey                                      Version: 0.0.1
# =======================================================================================
[metadata]
name             = project_name
version          = 0.0.1
description      = Brief description
long_description = file: README.md
long_description_content_type = text/markdown
url              = https://github.com/FabioFlorey/
download_url     = https://github.com/FabioFlorey/
author           = Fabio Craig Wimmer Florey
author_email     = fabioflorey@icloud.com
maintainer       =  Fabio Craig Wimmer Florey
maintainer_email = fabioflorey@icloud.com

license = MIT-0
license_files = LICENSE.md

keywords = 
    template
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:

# py_modules = module

# install_requires =
#    module>=version

python_requires = >=3.10

# [options.entry_points]
# console_scripts =
#     project=module:main

# [options.packages.find]
# include = 
#     package
# exclude = 
#     package

# [options.package_data]
# 

[bdist_wheel]
universal = True

[coverage:run]
plugins = covdefaults
parallel = true

# [mypy]
# check_untyped_defs = true
# disallow_any_generics = true
# disallow_incomplete_defs = true
# disallow_untyped_defs = true
# warn_redundant_casts = true
# warn_unused_ignores = true

# [mypy-testing.*]
# disallow_untyped_defs = false

# [mypy-tests.*]
# disallow_untyped_defs = false
